--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
   "dependencies": {
     "@nestjs/common": "^10.3.2",
     "@nestjs/core": "^10.4.4",
-    "@nestjs/platform-express": "^10.4.4",
+    "@nestjs/platform-express": "^10.4.15",
     "@prisma/client": "^6.0.1",
     "@types/jsonwebtoken": "^9.0.7",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
